Update 'kxxa5wqyu-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:cdc3b3e5934b47badfce413fe0a6b277476cf85b@sha256:9c8f662b6e3b4b4421008855635fed429c6d06e2fc855764ac70b3f5c111767d

--- a/components/kxxa5wqyu-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/kxxa5wqyu-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: kxxa5wqyu-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:cdc3b3e5934b47badfce413fe0a6b277476cf85b@sha256:9c8f662b6e3b4b4421008855635fed429c6d06e2fc855764ac70b3f5c111767d
+          name: container-image
